Fixing button text alignment;

--- a/docs/css/universal-material.css
+++ b/docs/css/universal-material.css
@@ -4349,6 +4349,9 @@ mark,
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   font-weight: 500;
   font-size: 0.875rem;
   padding: 0 1rem;
